--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Output of a random generator
+description: Additional clarifications of the github repositories here.
