--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Output of a random generator
+title: Output of a randomness generator
 description: Additional clarifications of the github repositories here.
